fixed arrow not showing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,7 +74,3 @@ body::-webkit-scrollbar-thumb {
     grid-template-columns: repeat(auto-fit, minmax(150px, 0.5fr));
   }
 }
-
-._hide-skeleton {
-  display: none;
-}
